# egoudaxyz

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts  wrangler.toml
.github/workflows/: deploy.yml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/agent/: arabifier_agent.py  core.py  monitor_agent.py  query_agent.py
backend/app/agent/tools/: __init__.py  markets.py  news.py  social.py  twitter.py
backend/app/chat/: routes.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  reports.py
backend/app/routes/: __init__.py  arabifier.py  reports.py  websocket.py
backend/app/scheduler/: __init__.py  tasks.py
functions/api/: test-browser.ts
infra/: .gitignore  AGENTS_DOC.md
infra/docker/: .env.example  Caddyfile  Dockerfile.backend  Dockerfile.frontend  docker-compose.prod.yml  docker-compose.yml
infra/terraform/: main.tf  outputs.tf  terraform.tfstate.1767566943.backup  terraform.tfvars.example  variables.tf
scripts/: deploy.sh  dev.sh  sync-env.sh
src/: app.css  hooks.server.ts
src/convex/: admin.ts  auth.ts  config.ts  drawings.ts  schema.ts  workspaces.ts
src/convex/_generated/: api.d.ts
src/lib/: auth-client.ts  convex-client.ts
src/lib/blog/: 3d-data.md  coding-bible.md  hello-world.md
src/lib/chat/: ag-ui-client.ts  chat-store.svelte.ts  index.ts
src/lib/components/: Excalidraw.svelte  ExcalidrawConvex.svelte
src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
src/routes/arabifier/: +layout.server.ts  +page.svelte
src/routes/blog/: +page.server.ts  +page.svelte
src/routes/dashboard/: +page.svelte  (+1 more)
src/types/: shims-markdown.d.ts
static/: robots.txt
static/.well-known/: security.txt
(+33 files in other folders)
