[project]
name = "egoudaxyz-backend"
version = "0.1.0"
description = "Admin dashboard backend with AG-UI chat interface"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-ai[ag-ui]>=0.0.24",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
